redis-follower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-follower
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-follower
  template:
    metadata:
      labels:
        app: redis-follower
    spec:
      containers:
      - name: redis-follower
        image: gcr.io/google_samples/gb-redis-follower:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  namespace: dev
spec:
  selector:
    app: redis-follower
  ports:
  - port: 6379
    targetPort: 6379
