redis-leader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-leader
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-leader
  template:
    metadata:
      labels:
        app: redis-leader
    spec:
      containers:
      - name: redis-leader
        image: docker.io/redis:6.0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-leader
  namespace: dev
spec:
  selector:
    app: redis-leader
  ports:
  - port: 6379
    targetPort: 6379
