ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iti-lab
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: mohamedali.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
